--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      # Monta tu directorio actual en '/code' dentro del contenedor
-      - .:/code
-    ports:
-      - "8081:8081"
-    # Usa el archivo .env para cargar las variables de entorno en el contenedor
+      - ./app:/code/app
+      - ./templates:/code/templates
+    environment:
+      - FLASK_APP=run.py
+      - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_RUN_PORT=8081
     env_file:
       - .env
-    command: python run.py
+    ports:
+      - "8081:8081"
+    command: ["hupper", "-m", "flask", "run"]
